Fixed long string overflow bug on spot details reviews, spot details spot descriptions and manage reviews section

--- a/frontend/src/components/ReviewsComponent/reviewComponentStyle.css
+++ b/frontend/src/components/ReviewsComponent/reviewComponentStyle.css
@@ -14,6 +14,9 @@
   border-bottom: 1px solid rgb(230, 230, 230);
   max-width: 1000px;
   width: 100%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  overflow: auto;
 }
 
 .reviewsHeadDiv {
