--- a/frontend/src/components/Spots/allspots.css
+++ b/frontend/src/components/Spots/allspots.css
@@ -147,6 +147,7 @@ button li {
 
 .reviewPanel {
   align-items: center;
+  max-width: 100%;
 }
 
 #manageReviewsPanel {
@@ -155,7 +156,22 @@ button li {
   align-items: center;
 }
 
+.reviewText {
+  max-width: 100%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  overflow: auto;
+}
+.reviewTextManageRev {
+  max-width: 80%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  overflow: auto;
+}
+
 .revImgContainer {
+  min-width: 125px;
+  min-height: 125px;
   width: 125px;
   height: 125px;
   overflow: hidden;
@@ -163,7 +179,17 @@ button li {
   justify-content: center;
   align-items: center;
   border-radius: 15px;
+  position: sticky;
+  right: 0px;
   padding: 0 0 0 10px;
+}
+
+.reviewerInfo,
+.reviewInfo {
+  max-width: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  overflow: auto;
 }
 
 #manageReviews {
